index.htmlの+記号が&#43;となっていたのを修正

--- a/index.html
+++ b/index.html
@@ -1338,7 +1338,7 @@
 
 
     
-<link rel="alternate" type="application/rss&#43;xml" title="RSS" href="https://helve-blog.com/index.xml">
+<link rel="alternate" type="application/rss+xml" title="RSS" href="https://helve-blog.com/index.xml">
 
 <meta name="description" content="機械学習や最適化、Pythonについて書くブログ" />
 
